Modal con concientizacion de La Positiva

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -143,212 +143,212 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2019-09-05T11:51:47.000Z",
-        "mtime": "2019-09-05T11:51:47.000Z",
-        "size": 28500
+        "ctime": "2019-10-19T01:45:07.000Z",
+        "mtime": "2019-10-19T01:45:07.000Z",
+        "size": 29090
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2019-08-31T05:46:28.000Z",
-        "mtime": "2019-08-31T05:46:28.000Z",
-        "size": 1774
+        "ctime": "2019-10-19T01:26:51.000Z",
+        "mtime": "2019-10-19T01:26:51.000Z",
+        "size": 1780
       },
       {
         "file": "img/home-hero.png",
-        "ctime": "2019-07-26T18:20:47.000Z",
-        "mtime": "2019-05-23T12:25:24.000Z",
+        "ctime": "2019-10-18T19:13:28.000Z",
+        "mtime": "2019-08-30T00:36:22.000Z",
         "size": 87608
       },
       {
         "file": "img/kallpa-old-logo.png",
-        "ctime": "2019-07-26T18:20:50.000Z",
-        "mtime": "2019-05-23T12:25:29.000Z",
+        "ctime": "2019-10-18T19:13:29.000Z",
+        "mtime": "2019-08-30T00:36:37.000Z",
         "size": 203996
       },
       {
         "file": "img/kcs-logo.png",
-        "ctime": "2019-07-26T18:20:51.000Z",
-        "mtime": "2019-05-23T12:25:32.000Z",
+        "ctime": "2019-10-18T19:13:30.000Z",
+        "mtime": "2019-08-30T00:36:43.000Z",
         "size": 76004
       },
       {
         "file": "css/fonts.css",
-        "ctime": "2019-07-26T18:20:34.000Z",
-        "mtime": "2019-05-23T12:24:45.000Z",
+        "ctime": "2019-10-18T19:13:16.000Z",
+        "mtime": "2019-08-30T00:35:50.000Z",
         "size": 439
       },
       {
         "file": "css/normalize.css",
-        "ctime": "2019-07-26T18:20:34.000Z",
-        "mtime": "2019-05-23T12:24:46.000Z",
+        "ctime": "2019-10-18T19:13:16.000Z",
+        "mtime": "2019-08-30T00:35:52.000Z",
         "size": 7718
       },
       {
         "file": "fonts/QuattrocentoSans-Bold.ttf",
-        "ctime": "2019-07-26T18:20:37.000Z",
-        "mtime": "2019-05-23T12:24:51.000Z",
+        "ctime": "2019-10-18T19:13:18.000Z",
+        "mtime": "2019-08-30T00:35:55.000Z",
         "size": 100560
       },
       {
         "file": "fonts/QuattrocentoSans-BoldItalic.ttf",
-        "ctime": "2019-07-26T18:20:37.000Z",
-        "mtime": "2019-05-23T12:24:54.000Z",
+        "ctime": "2019-10-18T19:13:18.000Z",
+        "mtime": "2019-08-30T00:35:57.000Z",
         "size": 100748
       },
       {
         "file": "fonts/QuattrocentoSans-Italic.ttf",
-        "ctime": "2019-07-26T18:20:38.000Z",
-        "mtime": "2019-05-23T12:24:57.000Z",
+        "ctime": "2019-10-18T19:13:20.000Z",
+        "mtime": "2019-08-30T00:35:59.000Z",
         "size": 108700
       },
       {
         "file": "fonts/QuattrocentoSans-Regular.ttf",
-        "ctime": "2019-07-26T18:20:38.000Z",
-        "mtime": "2019-05-23T12:25:01.000Z",
+        "ctime": "2019-10-18T19:13:20.000Z",
+        "mtime": "2019-08-30T00:36:00.000Z",
         "size": 98340
       },
       {
         "file": "img/selected.png",
-        "ctime": "2019-07-26T18:21:05.000Z",
-        "mtime": "2019-05-23T12:26:30.000Z",
+        "ctime": "2019-10-18T19:13:38.000Z",
+        "mtime": "2019-08-30T00:37:14.000Z",
         "size": 181
       },
       {
         "file": "img/beneficios.png",
-        "ctime": "2019-07-26T18:20:42.000Z",
-        "mtime": "2019-05-23T12:25:09.000Z",
+        "ctime": "2019-10-18T19:13:24.000Z",
+        "mtime": "2019-08-30T00:36:04.000Z",
         "size": 48774
       },
       {
         "file": "img/laboral.png",
-        "ctime": "2019-07-26T18:20:52.000Z",
-        "mtime": "2019-05-23T12:25:34.000Z",
+        "ctime": "2019-10-18T19:13:31.000Z",
+        "mtime": "2019-08-30T00:36:48.000Z",
         "size": 23873
       },
       {
         "file": "img/patrimonio.png",
-        "ctime": "2019-07-26T18:20:56.000Z",
-        "mtime": "2019-05-23T12:25:55.000Z",
+        "ctime": "2019-10-18T19:13:33.000Z",
+        "mtime": "2019-08-30T00:37:04.000Z",
         "size": 38072
       },
       {
         "file": "img/salud.png",
-        "ctime": "2019-07-26T18:21:00.000Z",
-        "mtime": "2019-05-23T12:26:10.000Z",
+        "ctime": "2019-10-18T19:13:35.000Z",
+        "mtime": "2019-08-30T00:37:08.000Z",
         "size": 25146
       },
       {
         "file": "img/vida.png",
-        "ctime": "2019-07-26T18:21:07.000Z",
-        "mtime": "2019-05-23T12:26:34.000Z",
+        "ctime": "2019-10-18T19:13:39.000Z",
+        "mtime": "2019-08-30T00:37:17.000Z",
         "size": 36275
       },
       {
         "file": "img/video-info.jpg",
-        "ctime": "2019-07-26T18:21:08.000Z",
-        "mtime": "2019-05-23T12:26:37.000Z",
+        "ctime": "2019-10-18T19:13:40.000Z",
+        "mtime": "2019-08-30T00:37:18.000Z",
         "size": 34018
       },
       {
         "file": "img/chubb.jpg",
-        "ctime": "2019-07-26T18:20:44.000Z",
-        "mtime": "2019-05-23T12:25:14.000Z",
+        "ctime": "2019-10-18T19:13:25.000Z",
+        "mtime": "2019-08-30T00:36:06.000Z",
         "size": 4962
       },
       {
         "file": "img/la_positiva.jpg",
-        "ctime": "2019-07-26T18:20:51.000Z",
-        "mtime": "2019-05-23T12:25:35.000Z",
-        "size": 10126
+        "ctime": "2019-10-18T19:13:30.000Z",
+        "mtime": "2019-10-14T17:34:49.000Z",
+        "size": 9058
       },
       {
         "file": "img/mapfre.jpg",
-        "ctime": "2019-07-26T18:20:52.000Z",
-        "mtime": "2019-05-23T12:25:36.000Z",
+        "ctime": "2019-10-18T19:13:31.000Z",
+        "mtime": "2019-08-30T00:36:49.000Z",
         "size": 12421
       },
       {
         "file": "img/pacifico.jpg",
-        "ctime": "2019-07-26T18:20:56.000Z",
-        "mtime": "2019-05-23T12:25:53.000Z",
+        "ctime": "2019-10-18T19:13:33.000Z",
+        "mtime": "2019-08-30T00:37:03.000Z",
         "size": 9512
       },
       {
         "file": "img/rimac.jpg",
-        "ctime": "2019-07-26T18:21:00.000Z",
-        "mtime": "2019-05-23T12:26:05.000Z",
+        "ctime": "2019-10-18T19:13:35.000Z",
+        "mtime": "2019-08-30T00:37:07.000Z",
         "size": 9315
       },
       {
         "file": "favicon.ico",
-        "ctime": "2019-05-08T23:34:03.000Z",
-        "mtime": "2019-01-03T22:09:34.000Z",
+        "ctime": "2019-10-18T19:13:14.000Z",
+        "mtime": "2019-08-30T00:35:46.000Z",
         "size": 2308
       },
       {
         "file": "index.php",
-        "ctime": "2019-09-04T23:45:47.000Z",
-        "mtime": "2019-09-04T23:45:47.000Z",
-        "size": 1529
+        "ctime": "2019-10-18T20:53:25.000Z",
+        "mtime": "2019-10-18T20:53:25.000Z",
+        "size": 1530
       },
       {
         "file": "img/contacto.png",
-        "ctime": "2019-07-26T18:20:44.000Z",
-        "mtime": "2019-05-23T12:25:15.000Z",
+        "ctime": "2019-10-18T19:13:26.000Z",
+        "mtime": "2019-08-30T00:36:07.000Z",
         "size": 20531
       },
       {
         "file": "inc/beneficios.view.php",
-        "ctime": "2019-07-26T18:21:10.000Z",
-        "mtime": "2019-05-23T12:26:49.000Z",
+        "ctime": "2019-10-18T19:13:40.000Z",
+        "mtime": "2019-08-30T00:37:19.000Z",
         "size": 4399
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2019-09-05T04:56:39.000Z",
-        "mtime": "2019-09-05T04:56:39.000Z",
-        "size": 5873
+        "ctime": "2019-10-18T19:13:41.000Z",
+        "mtime": "2019-09-14T00:01:11.000Z",
+        "size": 5865
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2019-09-05T00:37:20.000Z",
-        "mtime": "2019-09-05T00:37:20.000Z",
-        "size": 5271
+        "ctime": "2019-10-18T19:49:35.000Z",
+        "mtime": "2019-10-18T19:49:35.000Z",
+        "size": 5273
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2019-09-05T11:50:32.000Z",
-        "mtime": "2019-09-05T11:50:32.000Z",
-        "size": 4995
+        "ctime": "2019-10-18T20:44:51.000Z",
+        "mtime": "2019-10-18T20:44:51.000Z",
+        "size": 4899
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2019-07-26T18:21:12.000Z",
-        "mtime": "2019-05-23T12:26:53.000Z",
-        "size": 3594
+        "ctime": "2019-10-18T19:13:42.000Z",
+        "mtime": "2019-09-12T18:28:41.000Z",
+        "size": 3850
       },
       {
         "file": "inc/patrimonio.view.php",
-        "ctime": "2019-07-26T18:21:13.000Z",
-        "mtime": "2019-05-23T12:26:54.000Z",
+        "ctime": "2019-10-18T19:13:42.000Z",
+        "mtime": "2019-08-30T00:37:21.000Z",
         "size": 4279
       },
       {
         "file": "inc/salud.view.php",
-        "ctime": "2019-07-26T18:21:13.000Z",
-        "mtime": "2019-05-23T12:26:56.000Z",
-        "size": 3640
+        "ctime": "2019-10-18T19:13:42.000Z",
+        "mtime": "2019-09-12T18:29:06.000Z",
+        "size": 3896
       },
       {
         "file": "inc/vida.view.php",
-        "ctime": "2019-07-26T18:21:15.000Z",
-        "mtime": "2019-05-23T12:26:57.000Z",
+        "ctime": "2019-10-18T19:13:43.000Z",
+        "mtime": "2019-08-30T00:37:22.000Z",
         "size": 2732
       },
       {
         "file": "php/config.php",
-        "ctime": "2019-09-04T17:17:12.000Z",
-        "mtime": "2019-09-04T17:17:12.000Z",
+        "ctime": "2019-10-18T19:13:43.000Z",
+        "mtime": "2019-09-04T17:17:43.000Z",
         "size": 195
       },
       {
@@ -359,207 +359,225 @@
       },
       {
         "file": "img/nosotros.png",
-        "ctime": "2019-07-26T18:20:54.000Z",
-        "mtime": "2019-05-23T12:25:51.000Z",
+        "ctime": "2019-10-18T19:13:32.000Z",
+        "mtime": "2019-08-30T00:37:01.000Z",
         "size": 59247
       },
       {
         "file": "img/nosotros-art1.jpg",
-        "ctime": "2019-07-26T18:20:55.000Z",
-        "mtime": "2019-05-23T12:25:49.000Z",
+        "ctime": "2019-10-18T19:13:32.000Z",
+        "mtime": "2019-08-30T00:36:57.000Z",
         "size": 160683
       },
       {
         "file": "img/galeria/1.jpg",
-        "ctime": "2019-07-26T18:22:12.000Z",
-        "mtime": "2019-05-23T12:26:39.000Z",
+        "ctime": "2019-10-18T19:13:48.000Z",
+        "mtime": "2019-08-30T00:46:20.000Z",
         "size": 26828
       },
       {
         "file": "img/galeria/2.jpg",
-        "ctime": "2019-07-26T18:22:13.000Z",
-        "mtime": "2019-05-23T12:26:41.000Z",
+        "ctime": "2019-10-18T19:13:50.000Z",
+        "mtime": "2019-08-30T00:46:22.000Z",
         "size": 28466
       },
       {
         "file": "img/galeria/3.jpg",
-        "ctime": "2019-07-26T18:22:14.000Z",
-        "mtime": "2019-05-23T12:26:42.000Z",
+        "ctime": "2019-10-18T19:13:51.000Z",
+        "mtime": "2019-08-30T00:46:24.000Z",
         "size": 24241
       },
       {
         "file": "img/galeria/4.jpg",
-        "ctime": "2019-07-26T18:22:17.000Z",
-        "mtime": "2019-05-23T12:26:44.000Z",
+        "ctime": "2019-10-18T19:13:52.000Z",
+        "mtime": "2019-08-30T00:46:26.000Z",
         "size": 32227
       },
       {
         "file": "img/galeria/5.jpg",
-        "ctime": "2019-07-26T18:22:19.000Z",
-        "mtime": "2019-05-23T12:26:46.000Z",
+        "ctime": "2019-10-18T19:13:53.000Z",
+        "mtime": "2019-08-30T00:46:32.000Z",
         "size": 38611
       },
       {
         "file": "img/galeria/6.jpg",
-        "ctime": "2019-07-26T18:22:20.000Z",
-        "mtime": "2019-05-23T12:26:48.000Z",
+        "ctime": "2019-10-18T19:13:54.000Z",
+        "mtime": "2019-08-30T00:46:35.000Z",
         "size": 23331
       },
       {
         "file": "img/sctr.png",
-        "ctime": "2019-07-26T18:21:01.000Z",
-        "mtime": "2019-05-23T12:26:12.000Z",
+        "ctime": "2019-10-18T19:13:35.000Z",
+        "mtime": "2019-08-30T00:37:09.000Z",
         "size": 10894
       },
       {
         "file": "img/seguro-accidentes.png",
-        "ctime": "2019-07-26T18:21:02.000Z",
-        "mtime": "2019-05-23T12:26:16.000Z",
+        "ctime": "2019-10-18T19:13:36.000Z",
+        "mtime": "2019-08-30T00:37:10.000Z",
         "size": 13837
       },
       {
         "file": "img/seguro-oncologico.png",
-        "ctime": "2019-07-26T18:21:02.000Z",
-        "mtime": "2019-05-23T12:26:19.000Z",
+        "ctime": "2019-10-18T19:13:36.000Z",
+        "mtime": "2019-08-30T00:37:11.000Z",
         "size": 5752
       },
       {
         "file": "img/seguro-salud.png",
-        "ctime": "2019-07-26T18:21:03.000Z",
-        "mtime": "2019-05-23T12:26:23.000Z",
+        "ctime": "2019-10-18T19:13:37.000Z",
+        "mtime": "2019-08-30T00:37:13.000Z",
         "size": 11646
       },
       {
         "file": "img/futuro-20.png",
-        "ctime": "2019-07-26T18:20:45.000Z",
-        "mtime": "2019-05-23T12:25:17.000Z",
+        "ctime": "2019-10-18T19:13:26.000Z",
+        "mtime": "2019-08-30T00:36:09.000Z",
         "size": 15817
       },
       {
         "file": "img/seguro-academico.png",
-        "ctime": "2019-07-26T18:21:02.000Z",
-        "mtime": "2019-05-23T12:26:14.000Z",
+        "ctime": "2019-10-18T19:13:36.000Z",
+        "mtime": "2019-08-30T00:37:10.000Z",
         "size": 34167
       },
       {
         "file": "img/responsabilidad-civil.png",
-        "ctime": "2019-07-26T18:20:58.000Z",
-        "mtime": "2019-05-23T12:26:03.000Z",
+        "ctime": "2019-10-18T19:13:34.000Z",
+        "mtime": "2019-08-30T00:37:06.000Z",
         "size": 16595
       },
       {
         "file": "img/seguro-robo.png",
-        "ctime": "2019-07-26T18:21:02.000Z",
-        "mtime": "2019-05-23T12:26:21.000Z",
+        "ctime": "2019-10-18T19:13:37.000Z",
+        "mtime": "2019-08-30T00:37:12.000Z",
         "size": 8771
       },
       {
         "file": "img/seguro-transporte.png",
-        "ctime": "2019-07-26T18:21:03.000Z",
-        "mtime": "2019-05-23T12:26:24.000Z",
+        "ctime": "2019-10-18T19:13:37.000Z",
+        "mtime": "2019-08-30T00:37:13.000Z",
         "size": 10950
       },
       {
         "file": "img/seguro-vehicular.png",
-        "ctime": "2019-07-26T18:21:04.000Z",
-        "mtime": "2019-05-23T12:26:29.000Z",
+        "ctime": "2019-10-18T19:13:38.000Z",
+        "mtime": "2019-08-30T00:37:15.000Z",
         "size": 74393
       },
       {
         "file": "img/aseguradoras.jpg",
-        "ctime": "2019-07-26T18:20:39.000Z",
-        "mtime": "2019-05-23T12:25:04.000Z",
+        "ctime": "2019-10-18T19:13:21.000Z",
+        "mtime": "2019-08-30T00:36:01.000Z",
         "size": 31932
       },
       {
         "file": "img/asesores.jpg",
-        "ctime": "2019-07-26T18:20:40.000Z",
-        "mtime": "2019-05-23T12:25:06.000Z",
+        "ctime": "2019-10-18T19:13:22.000Z",
+        "mtime": "2019-08-30T00:36:02.000Z",
         "size": 39848
       },
       {
         "file": "img/beneficios.jpg",
-        "ctime": "2019-07-26T18:20:41.000Z",
-        "mtime": "2019-05-23T12:25:07.000Z",
+        "ctime": "2019-10-18T19:13:24.000Z",
+        "mtime": "2019-08-30T00:36:03.000Z",
         "size": 34223
       },
       {
         "file": "img/capital.jpg",
-        "ctime": "2019-07-26T18:20:43.000Z",
-        "mtime": "2019-05-23T12:25:11.000Z",
+        "ctime": "2019-10-18T19:13:25.000Z",
+        "mtime": "2019-08-30T00:36:05.000Z",
         "size": 32249
       },
       {
         "file": "img/ceviche.jpg",
-        "ctime": "2019-07-26T18:20:43.000Z",
-        "mtime": "2019-05-23T12:25:13.000Z",
+        "ctime": "2019-10-18T19:13:25.000Z",
+        "mtime": "2019-08-30T00:36:06.000Z",
         "size": 45213
       },
       {
         "file": "img/personal.jpg",
-        "ctime": "2019-07-26T18:20:57.000Z",
-        "mtime": "2019-05-23T12:25:57.000Z",
+        "ctime": "2019-10-18T19:13:33.000Z",
+        "mtime": "2019-08-30T00:37:04.000Z",
         "size": 32132
       },
       {
         "file": "img/premio.jpg",
-        "ctime": "2019-07-26T18:20:57.000Z",
-        "mtime": "2019-05-23T12:26:00.000Z",
+        "ctime": "2019-10-18T19:13:34.000Z",
+        "mtime": "2019-08-30T00:37:06.000Z",
         "size": 48810
       },
       {
         "file": "img/vehicular.jpg",
-        "ctime": "2019-07-26T18:21:06.000Z",
-        "mtime": "2019-05-23T12:26:32.000Z",
+        "ctime": "2019-10-18T19:13:39.000Z",
+        "mtime": "2019-08-30T00:37:16.000Z",
         "size": 40974
       },
       {
         "file": "happybirthday.html",
-        "ctime": "2019-07-26T18:20:35.000Z",
-        "mtime": "2019-05-23T12:25:02.000Z",
+        "ctime": "2019-10-18T19:13:14.000Z",
+        "mtime": "2019-08-30T00:35:47.000Z",
         "size": 1113
       },
       {
-        "file": "img/happyd-poster.png",
-        "ctime": "2019-07-26T18:20:46.000Z",
-        "mtime": "2019-05-23T12:25:21.000Z",
-        "size": 188868
-      },
-      {
         "file": "img/kallparadiotv-logo.png",
-        "ctime": "2019-07-26T18:20:49.000Z",
-        "mtime": "2019-05-24T16:03:52.000Z",
+        "ctime": "2019-10-18T19:13:30.000Z",
+        "mtime": "2019-08-30T00:36:39.000Z",
         "size": 27571
       },
       {
         "file": "img/img-modal.jpg",
-        "ctime": "2019-07-26T18:20:48.000Z",
-        "mtime": "2019-07-16T16:44:14.000Z",
+        "ctime": "2019-10-18T19:13:29.000Z",
+        "mtime": "2019-08-30T00:36:30.000Z",
         "size": 70262
       },
       {
         "file": "img/video-bienvenida.png",
-        "ctime": "2019-07-26T18:39:20.000Z",
-        "mtime": "2019-07-26T18:39:20.000Z",
+        "ctime": "2019-10-18T19:13:40.000Z",
+        "mtime": "2019-08-30T00:37:18.000Z",
         "size": 22050
       },
       {
         "file": "inc/_modal.php",
-        "ctime": "2019-09-05T00:34:05.000Z",
-        "mtime": "2019-09-05T00:34:05.000Z",
-        "size": 581
+        "ctime": "2019-10-19T01:48:15.000Z",
+        "mtime": "2019-10-19T01:48:15.000Z",
+        "size": 11202
       },
       {
         "file": "robots.txt",
-        "ctime": "2019-09-05T00:51:34.000Z",
-        "mtime": "2019-09-05T00:51:34.000Z",
+        "ctime": "2019-10-18T19:13:17.000Z",
+        "mtime": "2019-09-05T00:53:09.000Z",
         "size": 63
       },
       {
         "file": "sitemap.xml",
-        "ctime": "2019-09-05T00:52:20.000Z",
-        "mtime": "2019-09-05T00:52:20.000Z",
+        "ctime": "2019-10-18T19:13:17.000Z",
+        "mtime": "2019-09-05T00:53:10.000Z",
         "size": 1564
+      },
+      {
+        "file": "google43ea7a548306f3d8.html",
+        "ctime": "2019-10-18T19:13:15.000Z",
+        "mtime": "2019-08-30T02:58:35.000Z",
+        "size": 53
+      },
+      {
+        "file": "img/galeria/js.php",
+        "ctime": "2019-10-18T19:13:55.000Z",
+        "mtime": "2019-08-30T00:46:48.000Z",
+        "size": 70274
+      },
+      {
+        "file": "img/marina-poster.png",
+        "ctime": "2019-10-18T20:19:34.000Z",
+        "mtime": "2019-10-18T20:19:33.000Z",
+        "size": 46940
+      },
+      {
+        "file": "img/pnp-poster.png",
+        "ctime": "2019-10-18T20:20:00.000Z",
+        "mtime": "2019-10-18T20:20:00.000Z",
+        "size": 42065
       }
     ]
   },
