Modal XXX aniversarios de la pnp

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -143,14 +143,14 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2019-10-19T01:45:07.000Z",
-        "mtime": "2019-10-19T01:45:07.000Z",
-        "size": 29090
+        "ctime": "2019-12-07T07:15:08.000Z",
+        "mtime": "2019-12-07T07:15:08.000Z",
+        "size": 29077
       },
       {
         "file": "js/scripts.js",
-        "ctime": "2019-10-19T01:26:51.000Z",
-        "mtime": "2019-10-19T01:26:51.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 1780
       },
       {
@@ -257,9 +257,9 @@
       },
       {
         "file": "img/la_positiva.jpg",
-        "ctime": "2019-10-18T19:13:30.000Z",
-        "mtime": "2019-10-14T17:34:49.000Z",
-        "size": 9058
+        "ctime": "2019-12-07T06:56:29.000Z",
+        "mtime": "2019-12-07T06:56:29.000Z",
+        "size": 10126
       },
       {
         "file": "img/mapfre.jpg",
@@ -287,9 +287,9 @@
       },
       {
         "file": "index.php",
-        "ctime": "2019-10-18T20:53:25.000Z",
-        "mtime": "2019-10-18T20:53:25.000Z",
-        "size": 1530
+        "ctime": "2019-12-07T06:56:29.000Z",
+        "mtime": "2019-12-07T06:56:29.000Z",
+        "size": 1529
       },
       {
         "file": "img/contacto.png",
@@ -305,9 +305,9 @@
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2019-10-18T19:13:41.000Z",
-        "mtime": "2019-09-14T00:01:11.000Z",
-        "size": 5865
+        "ctime": "2019-12-07T06:56:29.000Z",
+        "mtime": "2019-12-07T06:56:29.000Z",
+        "size": 5873
       },
       {
         "file": "inc/index.view.php",
@@ -539,9 +539,9 @@
       },
       {
         "file": "inc/_modal.php",
-        "ctime": "2019-10-19T01:48:15.000Z",
-        "mtime": "2019-10-19T01:48:15.000Z",
-        "size": 11202
+        "ctime": "2019-12-07T07:11:35.000Z",
+        "mtime": "2019-12-07T07:11:35.000Z",
+        "size": 240
       },
       {
         "file": "robots.txt",
@@ -578,6 +578,12 @@
         "ctime": "2019-10-18T20:20:00.000Z",
         "mtime": "2019-10-18T20:20:00.000Z",
         "size": 42065
+      },
+      {
+        "file": "img/img-modal.png",
+        "ctime": "2019-12-07T07:05:59.000Z",
+        "mtime": "2019-12-07T07:05:58.000Z",
+        "size": 102770
       }
     ]
   },
