--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -143,9 +143,9 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2019-12-07T07:15:08.000Z",
-        "mtime": "2019-12-07T07:15:08.000Z",
-        "size": 29077
+        "ctime": "2020-02-19T17:20:51.000Z",
+        "mtime": "2020-02-19T17:20:51.000Z",
+        "size": 29694
       },
       {
         "file": "js/scripts.js",
@@ -257,9 +257,9 @@
       },
       {
         "file": "img/la_positiva.jpg",
-        "ctime": "2019-12-07T06:56:29.000Z",
-        "mtime": "2019-12-07T06:56:29.000Z",
-        "size": 10126
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
+        "size": 9058
       },
       {
         "file": "img/mapfre.jpg",
@@ -287,9 +287,9 @@
       },
       {
         "file": "index.php",
-        "ctime": "2019-12-07T06:56:29.000Z",
-        "mtime": "2019-12-07T06:56:29.000Z",
-        "size": 1529
+        "ctime": "2020-01-24T18:41:45.000Z",
+        "mtime": "2020-01-24T18:41:45.000Z",
+        "size": 1530
       },
       {
         "file": "img/contacto.png",
@@ -305,26 +305,26 @@
       },
       {
         "file": "inc/contacto.view.php",
-        "ctime": "2019-12-07T06:56:29.000Z",
-        "mtime": "2019-12-07T06:56:29.000Z",
-        "size": 5873
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
+        "size": 5865
       },
       {
         "file": "inc/index.view.php",
-        "ctime": "2019-10-18T19:49:35.000Z",
-        "mtime": "2019-10-18T19:49:35.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 5273
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2019-10-18T20:44:51.000Z",
-        "mtime": "2019-10-18T20:44:51.000Z",
-        "size": 4899
+        "ctime": "2020-02-19T17:15:56.000Z",
+        "mtime": "2020-02-19T17:15:56.000Z",
+        "size": 4907
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2019-10-18T19:13:42.000Z",
-        "mtime": "2019-09-12T18:28:41.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 3850
       },
       {
@@ -335,8 +335,8 @@
       },
       {
         "file": "inc/salud.view.php",
-        "ctime": "2019-10-18T19:13:42.000Z",
-        "mtime": "2019-09-12T18:29:06.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 3896
       },
       {
@@ -526,22 +526,10 @@
         "size": 27571
       },
       {
-        "file": "img/img-modal.jpg",
-        "ctime": "2019-10-18T19:13:29.000Z",
-        "mtime": "2019-08-30T00:36:30.000Z",
-        "size": 70262
-      },
-      {
-        "file": "img/video-bienvenida.png",
-        "ctime": "2019-10-18T19:13:40.000Z",
-        "mtime": "2019-08-30T00:37:18.000Z",
-        "size": 22050
-      },
-      {
         "file": "inc/_modal.php",
-        "ctime": "2019-12-07T07:11:35.000Z",
-        "mtime": "2019-12-07T07:11:35.000Z",
-        "size": 240
+        "ctime": "2020-01-24T18:30:18.000Z",
+        "mtime": "2020-01-24T18:30:18.000Z",
+        "size": 385
       },
       {
         "file": "robots.txt",
@@ -557,33 +545,51 @@
       },
       {
         "file": "google43ea7a548306f3d8.html",
-        "ctime": "2019-10-18T19:13:15.000Z",
-        "mtime": "2019-08-30T02:58:35.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 53
       },
       {
         "file": "img/galeria/js.php",
-        "ctime": "2019-10-18T19:13:55.000Z",
-        "mtime": "2019-08-30T00:46:48.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 70274
       },
       {
         "file": "img/marina-poster.png",
-        "ctime": "2019-10-18T20:19:34.000Z",
-        "mtime": "2019-10-18T20:19:33.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 46940
       },
       {
         "file": "img/pnp-poster.png",
-        "ctime": "2019-10-18T20:20:00.000Z",
-        "mtime": "2019-10-18T20:20:00.000Z",
+        "ctime": "2019-12-07T07:02:50.000Z",
+        "mtime": "2019-12-07T07:02:50.000Z",
         "size": 42065
       },
       {
         "file": "img/img-modal.png",
-        "ctime": "2019-12-07T07:05:59.000Z",
-        "mtime": "2019-12-07T07:05:58.000Z",
-        "size": 102770
+        "ctime": "2020-02-19T16:56:06.000Z",
+        "mtime": "2020-02-19T16:56:06.000Z",
+        "size": 155191
+      },
+      {
+        "file": "img/new-year-poster.jpg",
+        "ctime": "2020-01-01T00:42:53.000Z",
+        "mtime": "2020-01-01T00:42:52.000Z",
+        "size": 90618
+      },
+      {
+        "file": "img/video-bienvenida.jpg",
+        "ctime": "2020-01-24T18:47:48.000Z",
+        "mtime": "2020-01-24T18:47:47.000Z",
+        "size": 16684
+      },
+      {
+        "file": "img/video-informativo-poster.jpg",
+        "ctime": "2020-02-19T17:07:54.000Z",
+        "mtime": "2020-02-19T17:07:54.000Z",
+        "size": 69206
       }
     ]
   },
