Actualizacion de web con calendario de cumpleanos y eventos del mes

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -323,9 +323,9 @@
       },
       {
         "file": "inc/nosotros.view.php",
-        "ctime": "2020-06-13T23:36:10.000Z",
-        "mtime": "2020-06-13T23:36:10.000Z",
-        "size": 7364
+        "ctime": "2020-06-17T18:51:46.000Z",
+        "mtime": "2020-06-17T18:51:46.000Z",
+        "size": 8289
       },
       {
         "file": "inc/patrimonio.view.php",
@@ -550,12 +550,6 @@
         "size": 53
       },
       {
-        "file": "img/galeria/js.php",
-        "ctime": "2020-06-11T22:46:31.000Z",
-        "mtime": "2019-12-09T15:46:00.000Z",
-        "size": 70274
-      },
-      {
         "file": "img/marina-poster.png",
         "ctime": "2020-06-11T22:37:04.000Z",
         "mtime": "2019-12-09T15:45:54.000Z",
@@ -742,12 +736,6 @@
         "size": 3382
       },
       {
-        "file": "img/video-modal.png",
-        "ctime": "2020-06-12T17:02:20.000Z",
-        "mtime": "2020-06-12T17:02:20.000Z",
-        "size": 9774
-      },
-      {
         "file": "img/evento-mensual.png",
         "ctime": "2020-06-13T00:36:08.000Z",
         "mtime": "2020-06-13T00:36:08.000Z",
@@ -776,6 +764,18 @@
         "ctime": "2020-06-13T04:54:23.000Z",
         "mtime": "2020-06-13T04:54:23.000Z",
         "size": 125363
+      },
+      {
+        "file": "img/puntual.svg",
+        "ctime": "2020-06-11T23:33:29.000Z",
+        "mtime": "2020-06-11T23:33:28.000Z",
+        "size": 1450
+      },
+      {
+        "file": "img/eliana.png",
+        "ctime": "2020-06-17T15:43:13.000Z",
+        "mtime": "2020-06-17T15:43:13.000Z",
+        "size": 8650
       }
     ]
   },
