Banner de cabecera home con texto

--- a/web/prepros-6.config
+++ b/web/prepros-6.config
@@ -143,9 +143,9 @@
     "history": [
       {
         "file": "css/styles.css",
-        "ctime": "2020-06-13T22:35:50.000Z",
-        "mtime": "2020-06-13T22:35:50.000Z",
-        "size": 33222
+        "ctime": "2020-06-19T18:16:14.000Z",
+        "mtime": "2020-06-19T18:16:14.000Z",
+        "size": 33735
       },
       {
         "file": "js/scripts.js",
@@ -155,9 +155,9 @@
       },
       {
         "file": "img/home-hero.png",
-        "ctime": "2020-06-11T22:36:55.000Z",
-        "mtime": "2020-03-04T17:00:22.000Z",
-        "size": 123650
+        "ctime": "2020-06-19T18:13:40.000Z",
+        "mtime": "2020-06-18T19:39:55.000Z",
+        "size": 115006
       },
       {
         "file": "img/kallpa-old-logo.png",
@@ -317,9 +317,9 @@
       },
       {
         "file": "inc/inicio.view.php",
-        "ctime": "2020-06-13T22:23:43.000Z",
-        "mtime": "2020-06-13T22:23:43.000Z",
-        "size": 5216
+        "ctime": "2020-06-19T01:14:17.000Z",
+        "mtime": "2020-06-19T01:14:17.000Z",
+        "size": 5512
       },
       {
         "file": "inc/nosotros.view.php",
@@ -776,6 +776,12 @@
         "ctime": "2020-06-17T15:43:13.000Z",
         "mtime": "2020-06-17T15:43:13.000Z",
         "size": 8650
+      },
+      {
+        "file": "img/home-hero.jpg",
+        "ctime": "2020-06-19T18:14:53.000Z",
+        "mtime": "2020-06-19T18:14:52.000Z",
+        "size": 87362
       }
     ]
   },
